# MARlea

./: .gitignore  Aleae.sln  Cargo.toml  LICENSE  README.md  init.csv  input.csv
Aleae/: Aleae.csproj  (+3 more)
MARlea_simulator/: Cargo.toml  input.csv  output.csv
MARlea_simulator/lib/marlea_engine/: Cargo.toml
MARlea_simulator/lib/marlea_engine/src/: main.rs
MARlea_simulator/lib/marlea_engine/src/trial/: mod.rs
MARlea_simulator/lib/marlea_engine/src/trial/reaction_network/: mod.rs
MARlea_simulator/src/: main.rs
MARlea_simulator/src/lib/marlea_engine/: mod.rs  supported_file_type.rs  tasks.rs  tests.rs
MARlea_simulator/src/lib/marlea_engine/trial/: mod.rs
MARlea_simulator/src/marlea_engine/: mod.rs
MARlea_simulator/src/marlea_engine/src/: lib.rs  supported_file_type.rs  tests.rs
MARlea_simulator/src/marlea_engine/trial/: mod.rs
MARlea_simulator/src/marlea_engine/trial/reaction_network/: mod.rs
MARlea_simulator/src/reaction_network/: mod.rs
MARlea_simulator/src/reaction_network/reaction/: mod.rs
MARlea_simulator/src/reaction_network/reaction/term/: mod.rs
MARlea_simulator/src/simulation/: mod.rs  stability_checker.rs
MARlea_simulator/src/simulation/reaction_network/: mod.rs
MARlea_simulator/src/simulation/reaction_network/reaction/: mod.rs
MARlea_simulator/src/trial/: mod.rs
MARlea_simulator/src/trial/reaction_network/: mod.rs
MARlea_simulator/src/trial/reaction_network/reaction/: mod.rs
MARlea_simulator/tests/: main_tests  mod.rs
src/marlea_engine/: Cargo.toml  LICENSE
src/marlea_engine/src/: lib.rs  supported_file_type.rs  tests.rs
src/marlea_engine/src/trial/: mod.rs
src/marlea_engine/src/trial/reaction_network/: mod.rs
src/marlea_engine/src/trial/results/: mod.rs
(+33 files in other folders)
