[package]
name = "Marlea"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
futures = { version = "0.3.27", features = ["thread-pool"] }
rand = "0.8.5"
structopt = "0.3"
