[package]
name = "marlea_engine"
version = "0.1.0"
edition = "2021"
description = "This is the standalone engine for marlea available to be imported as an object in other projects. It preforms stochastic simulation and parsing on CRNs from CSV files (Other formats TBA). "
license = "MIT"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
rand = "0.8.5"
threadpool = "1.8.1"
